# agentic-rag

./: .gitignore  README.md  skills-lock.json
backend/: Makefile  README.md  alembic.ini  pyproject.toml  requests.http
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: chat.py  health.py  ingest.py
backend/app/domain/: models.py  ports.py
backend/app/infra/: chunker.py  database.py  db_models.py  document_store.py  embedder.py  llm.py  parser.py  reranker.py  vector_store.py
backend/app/services/: chat.py  ingest.py  retrieval.py
backend/tests/: conftest.py  test_health.py
backend/tests/unit/: test_chunker.py  test_services.py
docs/week0/: README.md  kpi.md  scope.md
docs/week1/: README.md
eval/week0/: README.md  qa_goldens_seed.csv  rubric.md
frontend/: .prettierrc  Makefile  README.md  kubb.config.ts  openapi.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-interface.tsx  citation-card.tsx  ingest-panel.tsx  message-bubble.tsx
frontend/lib/: api.ts  utils.ts
infra/: docker-compose.yml
